--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.0",
     "mocha": "^10.2.0",
     "mongoose": "^7.2.1",
+    "nodemailer": "^6.9.3",
     "supertest": "^6.3.3",
     "uuid": "^9.0.0"
   },
@@ -33,6 +34,7 @@
     "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mocha": "^10.0.1",
+    "@types/nodemailer": "^6.4.8",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
