--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chai": "^4.3.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "dotenv-flow": "^3.2.0",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
@@ -30,6 +31,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.3.5",
     "@types/cors": "^2.8.13",
+    "@types/dotenv-flow": "^3.2.0",
     "@types/express": "^4.17.17",
     "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.2",
